force-app/main/default/objects/Product_Pricing__c/Product_Pricing__c.object-meta.xml
<CustomObject>
    <description>Used to compare competitor pricing with Ubiquity over years 1-5</description>
    <label>Product Price</label>
    <nameField>
        <label>Product Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>