force-app/main/default/objects/Product_Pricing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account linked to product and pricing.</description>
    <inlineHelpText>Account linked to product and pricing.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Prices</relationshipLabel>
    <relationshipName>Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>