force-app/main/default/objects/Product_Pricing__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <description>Annual Admin Fee charged for this product.</description>
    <inlineHelpText>Annual Admin Fee charged for this product.</inlineHelpText>
    <label>Admin Fee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>