force-app/main/default/objects/Product_Pricing__c/fields/Basis_Points__c.field-meta.xml
<CustomField>
    <fullName>Basis_Points__c</fullName>
    <description>Basis Points charged on product</description>
    <inlineHelpText>Basis Points charged on product</inlineHelpText>
    <label>Basis Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>