force-app/main/default/objects/Product_Pricing__c/fields/Conversion_Fee__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Fee__c</fullName>
    <description>Conversion Fee charged on this product.</description>
    <inlineHelpText>Conversion Fee charged on this product.</inlineHelpText>
    <label>Conversion Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>