force-app/main/default/objects/Product_Pricing__c/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Number of Participants used for modeling</description>
    <inlineHelpText>Number of Participants used for modeling</inlineHelpText>
    <label>Number of Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>