force-app/main/default/objects/Product_Pricing__c/fields/Participant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fee__c</fullName>
    <description>Annualized fees for one participant. $5/month = $60.</description>
    <inlineHelpText>Annualized fees for one participant. $5/month = $60.</inlineHelpText>
    <label>Participant Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>