force-app/main/default/objects/Product_Pricing__c/fields/Pricing_Year__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Year__c</fullName>
    <description>Year after initial purchase of plan for price to be calculated.</description>
    <inlineHelpText>Year after initial purchase of plan for price to be calculated.</inlineHelpText>
    <label>Pricing Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>