force-app/main/default/objects/Product_Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product and Service linked to Pricing</description>
    <inlineHelpText>Product and Service linked to Pricing</inlineHelpText>
    <label>Product</label>
    <referenceTo>Products_Services__c</referenceTo>
    <relationshipLabel>Product Prices</relationshipLabel>
    <relationshipName>Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>