force-app/main/default/objects/Product_Pricing__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <description>Setup Fee charged on product.</description>
    <inlineHelpText>Setup Fee charged on product.</inlineHelpText>
    <label>Setup Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>