force-app/main/default/objects/Product_Pricing__c/fields/Total_Conversion_Plan_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Conversion_Plan_Price__c</fullName>
    <formula>Setup_Fee__c +  Conversion_Fee__c +((Admin_Fee__c + (Participant_Fee__c* Number_of_Participants__c )+((Basis_Points__c/10000)*(300000+(6000* Number_of_Participants__c ))))* Pricing_Year__c)</formula>
    <label>Total Conversion Plan Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>